--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- 1 сторінка -->
+    <!-- <div class="start">
+        <div class="text">Привіт!<br>Давайте перевіримо Ваші знання з англійської:)</div>
+        <div class = "button">ПОЧАТИ</div>
+    </div> -->
+    <!-- 2 сторінка -->
+    <div class="second">
+        <div class="level">Оберіть свій рівень</div> 
+        <div class="buttons">
+            <div class='btn-1'>легкий</div>
+            <div class='btn-2'>середній</div>
+            <div class='btn-3'>важкий</div>
+       </div>
+    </div>
 
+
+<script src="script.js"></script>
+</body>
+</html> 
