створили 2 та 3 сторінку

--- a/index.html
+++ b/index.html
@@ -13,16 +13,27 @@
         <div class = "button">ПОЧАТИ</div>
     </div> -->
     <!-- 2 сторінка -->
-    <div class="second">
+    <!-- <div class="second">
         <div class="level">Оберіть свій рівень</div> 
         <div class="buttons">
-            <div class='btn-1'>легкий</div>
+           <div class='btn-1'>легкий</div>
             <div class='btn-2'>середній</div>
             <div class='btn-3'>важкий</div>
        </div>
-    </div>
-
-
+    </div> -->
+        <!-- 3 сторінка -->
+    <!-- <div class="question">Where are you from?</div>
+    <div class= "answers">
+        <div class="answer">IDK</div>
+        <div class="answer">Ukraine</div>
+        <div class="answer">Romania</div>  
+    </div> -->
+    
+    <div class="end">
+        <h3>Ви відповіли правильно на 1 запитання з 1!</h3>
+        <div class="button">Почати</div>
+    </div> 
+    
 <script src="script.js"></script>
 </body>
 </html> 
