--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
     </div> 
     
 <script src="script.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
 </body>
 </html> 
