--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
 </div>
         
-    <div class="end">
+    <!-- <div class="end">
         <h3>Ви відповіли правильно на 1 запитання з 5!</h3>
         <div class="button">Почати</div>
-    </div> 
+    </div>  -->
     
 <script src="script.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
